# udf

./: CMakeLists.txt  Makefile.am  README.build  README.md  README.txt  autogen.sh  build.bat  build.sh  configure.ac  run  run.sh  udf.cbp  udf.layout  udf.sln  udf.workspace  udf1.workspace  update-ver.sh  version.cmake  version.m4
BuildSystem/: build.bat  build.number  build.settings  build.xml  changelog2txt.xsl  changelog_cvs.last  changelog_svn.last  nsisbuild.bat  svn.settings  vcexpressbuild.bat
BuildSystem/svnant-1.2.0-RC1/: build.properties  changelog.txt
DBManager/: DBManager.project  dbaccessmgr.c
DBManager/include/: dbaccessmgr.h
bs/: build.bat  build.number
build_utils/: ConfigureBuild.cmake  Dependencies.cmake  UDFConfigTargets.cmake  UDFGetVersion.cmake
common/: CMakeLists.txt  Makefile.am  Makefile.in  common.project  common.vcproj
common/src/: common.h  connection_data.h  datatypes.h  errorcodes.h  udfcommon.h  udfdebug.h  version.h
db/: all-data.sql  all.sql  db.project  structure.sql  tables.sql  user.sql
db/udf/: age_category.sql  age_code.sql  categories.sql  championship.sql  championship_categories.sql  championship_judges_mark.sql  championship_judges_team.sql  championship_team.sql  championship_type.sql  championshit_team_categories.sql  cities.sql  clubs.sql  countries.sql  dance_types.sql  dancers.sql  gender.sql  judges.sql  judges_categories_have.sql  judges_categories_name.sql  liga.sql  treners.sql
dbmgr/: CMakeLists.txt  Makefile.am  Makefile.in  dbmgr.project  dbmgr.vcproj
dbmgr/src/: cdbconnection_base.h  db.h  dbconnection.cpp  dbconnection.h  dberrors.cpp  dberrors.h  dbmgr.cpp  dbmgr.h  dbtable.cpp  dbtable.h  dbutils.cpp  dbutils.h  tagecategory.cpp  tagecategory.h  tagecode.cpp  tagecode.h  tcategories.cpp  tcategories.cpp~  tcategories.h  tchampionship.cpp  tchampionship.h  tchampionshipcategories.cpp  tchampionshipcategories.h  tchampionshipjudgesmark.cpp  tchampionshipjudgesmark.h  tchampionshipjudgesteam.cpp  tchampionshipjudgesteam.h  tchampionshipteam.cpp  tchampionshipteam.h  tchampionshipteamcategories.cpp  tchampionshipteamcategories.h  tchampionshipteamdancers.cpp  tchampionshipteamdancers.h  tchampionshiptour.cpp  tchampionshiptour.h  tchampionshiptourpass.cpp  tchampionshiptourpass.h  tchampionshiptype.cpp  tchampionshiptype.h  tcities.cpp  (+40 more)
dbtest/: CMakeLists.txt  agecategorytest.cpp  agecategorytest.h  agecodetest.cpp  agecodetest.h  ctestbase.cpp  ctestbase.h  dbtest.project  main.cpp
doc/: skating.htm
gui/: CMakeLists.txt  Makefile.am  Makefile.in  gui.project  gui.vcproj
gui/res/: button_assign.xpm  button_assign_followed.xpm  button_assign_random.xpm  button_cancel.xpm  button_categories.xpm  button_categoryadd.xpm  button_categoryremove.xpm  button_danceradd.xpm  button_delete.xpm  button_left.xpm  button_leftall.xpm  button_mark.xpm  button_minus.xpm  button_money.xpm  button_move_up10.xpm  button_ok.xpm  button_other.xpm  button_plus.xpm  button_random.xpm  button_results.xpm  button_rightall.xpm  button_save.xpm  button_startnumber.xpm  button_tour_add.xpm  button_tour_edit.xpm  button_undo.xpm  button_update.xpm  button_update2.xpm  button_user.xpm  mail.xpm  resource.rc  tree_checked.xpm  tree_unchecked.xpm
gui/src/: cdbmanager.cpp  cdbmanager.h  gui.fbp  gui2.fbp  main.cpp  noname.h  resource.h  string_def.h  udf.cpp  udf.h  udfAccountInfo.cpp  udfAccountInfo.h  udfAddTeamCategory.cpp  udfAddTeamCategory.h  udfBlockInfo.cpp  udfBlockInfo.h  udfCategoriesMngrDlg.cpp  udfCategoriesMngrDlg.h  udfCategoryInfo.cpp  udfCategoryInfo.h  udfChampionshipCategoriesMngrDlg.cpp  udfChampionshipCategoriesMngrDlg.h  udfChampionshipJudgesTeamMngrDlg.cpp  udfChampionshipJudgesTeamMngrDlg.h  udfChampionshipTypeMngr.cpp  udfChampionshipTypeMngr.h  udfCitiesMngr.cpp  udfClubsMngrDlg.cpp  udfClubsMngrDlg.h  udfCodeDialog.cpp  udfCodeDialog.h  udfCountriesMngr.cpp  udfCsInfo.cpp  udfCsInfo.h  udfCsTourReport.cpp  udfCsTourReport.h  udfCsTours.cpp  udfCsTours.h  udfDancersMngrDlg.cpp  udfDancersMngrDlg.h  (+45 more)
m4-extra/: ac_pkg_wxwidgets.m4  bb_enable_doxygen.m4
reports/: CMakeLists.txt  reports.vcproj
reports/src/: udfreportbase.cpp  udfreportbase.h
reportstest/: CMakeLists.txt  reportstest.vcproj
reportstest/src/: main.cpp
skating/: skating.project  skating.vcproj
skating/src/: udfskatingrules.cpp  udfskatingrules.h
skatingtest/: CMakeLists.txt  skatingtest.project  skatingtest.vcproj
skatingtest/src/: main.cpp
src/: Makefile.am
src/common/: common.project
src/dbmgr/: Makefile.am  dbmgr.project
src/dbmgr/include/: udfcommon.h
src/dbmgr/src/: db.h  dbconnection.cpp  dberrors.cpp  dberrors.h  dbmgr.h  dbtable.h  dbutils.cpp  dbutils.h  tcategories.h  tchampionship.cpp  tchampionship.h  tchampionshipcategories.h  tchampionshipjudgesmark.h  tchampionshipjudgesteam.cpp  tchampionshipjudgesteam.h  tchampionshipteam.h  tchampionshipteamcategories.cpp  tchampionshipteamcategories.h  tchampionshipteamdancers.h  tchampionshiptour.cpp  tchampionshiptour.h  tchampionshiptourpass.cpp  tchampionshiptourpass.h  tchampionshiptype.h  tcities.cpp  tcities.h  tclubs.cpp  tclubs.h  tcountries.cpp  tcountries.h  tcsblocks.h  tcsblocksj2c.h  tdancers.cpp  tdancers.h  tdancetypes.cpp  tdancetypes.h  tgender.h  tjudges.h  tjudgescategorieshave.cpp  tjudgescategorieshave.h  (+11 more)
src/gui/: CMakeLists.txt  gui.project
src/include/: udfcommon.h
src/skating/: CMakeLists.txt  skating.project
test/dbtest/: dbtest.project  main.cpp
test/reportstest/: CMakeLists.txt
test/skatingtest/: CMakeLists.txt  skatingtest.project
tools/Heidi/: portable_settings.txt
udf/: DbConnection.cpp  DbConnection.h  DbTable.cpp  DbTable.h  udf.project
udf/res/: button_account.xpm  button_add.xpm  button_assign.xpm  button_judges.xpm  button_right.xpm
udf/src/: cdbmanager.h  main.cpp  main.h  udf.h  udfAccountInfo.cpp  udfCategoriesMngrDlg.h  udfDancersMngrDlg.h  udfDancersTeamMngr.cpp  udfJudgesMngr.cpp  udfStartNumberAssignDlg.h  udfTarinersMngrDlg.cpp  udfTeamDancersMngrDlg.cpp
web/: index.php
web/css/: style.css  (+1 more)
(+85 files in other folders)
