
AM_CPPFLAGS = -I$(top_srcdir)/include

libdbmgrdir = $(includedir)/dbmgr/src

libdbmgr_HEADERS = \
	src/dbmgr.h

#INCLUDES = -I$(top_srcdir)/include

CSRCS = 
HSRCS = 

HSRCS += \
	src/dbmgr.h \
	src/dberrors.h \
	src/dbutils.h \
	src/dbconnection.h \
	src/dbtable.h \
	src/tagecategory.h \
	src/tcategories.h \
	src/tchampionship.h \
	src/tchampionshiptour.h \
	src/tchampionshipcategories.h \
	src/tchampionship.h \
	src/tchampionshipjudgesmark.h \
	src/tchampionshipjudgesteam.h \
	src/tchampionshipteamcategories.h \
	src/tchampionshipteamdancers.h \
	src/tchampionshipteam.h \
	src/tchampionshiptourpass.h \
	src/tchampionshiptype.h \
	src/tcities.h \
	src/tclubs.h \
	src/tcountries.h \
	src/tdancers.h \
	src/tdancetypes.h \
	src/tgender.h \
	src/tjudgescategorieshave.h \
	src/tjudges.h \
	src/tliga.h \
	src/ttreiners.h \
	src/ttourtypes.h \
	src/tuserroles.h \
	src/tpaymenthistory.h \
	src/tcsblocks.h \
	src/tcsblocksj2c.h \
	src/tstaff.h 
		
CSRCS += \
	src/dberrors.cpp \
	src/dbutils.cpp \
	src/dbconnection.cpp \
	src/dbtable.cpp \
	src/tcategories.cpp \
	src/tagecategory.cpp \
	src/tcategories.cpp \
	src/tchampionship.cpp \
	src/tchampionshiptour.cpp \
	src/tchampionshipcategories.cpp \
	src/tchampionship.cpp \
	src/tchampionshipjudgesmark.cpp \
	src/tchampionshipjudgesteam.cpp \
	src/tchampionshipteamcategories.cpp \
	src/tchampionshipteamdancers.cpp \
	src/tchampionshipteam.cpp \
	src/tchampionshiptourpass.cpp \
	src/tchampionshiptype.cpp \
	src/tcities.cpp \
	src/tclubs.cpp \
	src/tcountries.cpp \
	src/tdancers.cpp \
	src/tdancetypes.cpp \
	src/tgender.cpp \
	src/tjudgescategorieshave.cpp \
	src/tjudges.cpp \
	src/tliga.cpp \
	src/ttreiners.cpp \
	src/ttourtypes.cpp \
	src/tuserroles.cpp \
	src/tpaymenthistory.cpp \
	src/tcsblocks.cpp \
	src/tcsblocksj2c.cpp \
	src/tstaff.cpp 

lib_LTLIBRARIES = \
	libdbmgr.la

libdbmgr_la_SOURCES = \
	$(HSRCS) \
	$(CSRCS) 


all-local: 
	echo "******************* $(top_srcdir) ***************"
#EXTRA_DIST = \
#	clitest.c clitest.txt \
#	libcli.spec COPYING README Makefile

	

